--- a/new dep/Jenkinsfile
+++ b/new dep/Jenkinsfile
@@ -1,4 +1,4 @@
-pipeline {
+pipeline {   
     agent any
 
     environment {
@@ -17,7 +17,8 @@ pipeline {
                 sh '''
                 docker stop $IMAGE_NAME || true
                 docker rm $IMAGE_NAME || true
-                docker run -d -p 8080:80 --name $IMAGE_NAME $IMAGE_NAME
+                docker run -d -p 8085:80 --name mydockerapp mydockerapp
+
                 '''
             }
         }
