--- a/new dep/dockerfile
+++ b/new dep/dockerfile
@@ -1,3 +1,10 @@
-# Use nginx as base image
 FROM nginx:latest
+
+# Copy your website files (index.html etc.)
+COPY . /usr/share/nginx/html
+
+# Expose port 80
 EXPOSE 80
+
+# Start nginx in foreground
+CMD ["nginx", "-g", "daemon off;"]
